Fix Sort-List Z-index

--- a/src/components/Sort/Sort.css
+++ b/src/components/Sort/Sort.css
@@ -40,6 +40,7 @@
     border: 1px solid #D4D5D9;
     border-top: none;
     padding-bottom: 15px;
+    z-index: 1;
 }
 .sort-list-radio-button{
     display: none;
